--- a/contact.html
+++ b/contact.html
@@ -10,31 +10,31 @@
         <link rel="icon" href="img/favicon.png"/>
         <title>iClean Services | Contact</title>
     </header>
-    <body class="bg-light">
+    <body class="bg-light contact-s1">
         <header class="position-absolute w-100 px-2">
             <nav class="navbar navbar-expand-md navbar-light">
                 <a href="index.html" class="navbar-brand">
                     <img class="navbar-logo" src="img/navbar_logo.png" alt="logo"/>
                 </a>
-                <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#main-nav">
+                <button class="navbar-toggler bg-warning" data-bs-toggle="collapse" data-bs-target="#main-nav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="main-nav">
-                    <ul class="navbar-nav ms-auto text-end text-uppercase">
+                    <ul class="navbar-nav ms-auto text-end text-uppercase fw-bold text-shadow">
                         <li class="nav-item">
-                            <a href="index.html" class="nav-link">Home</a>
+                            <a href="index.html" class="nav-link text-warning">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="services.html" class="nav-link">Services</a>
+                            <a href="services.html" class="nav-link text-warning">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a href="about.html" class="nav-link">About</a>
+                            <a href="about.html" class="nav-link text-warning">About</a>
                         </li>
                         <li class="nav-item">
-                            <a href="contact.html" class="nav-link">Contact</a>
+                            <a href="contact.html" class="nav-link text-warning">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a href="order.html" class="nav-link">
+                            <a href="order.html" class="nav-link text-warning">
                                 <span class="fa fa-shopping-cart"></span>
                             </a>
                         </li>
@@ -42,21 +42,18 @@
                 </div>
             </nav>
         </header>
-        <section class="contact-s1 minh-25vh d-none d-md-block">
-        </section>
-        <section class="contact-s2 min-vh-100 container-fluid d-flex align-items-center py-5">
-            <div class="row w-100 mx-0">
-                <div class="col-12 col-md-7 minh-25vh"></div>
-                <div class="col-10 col-md-5 mx-auto d-flex align-items-center">
-                    <div>
-                        <img class="navbar-logo" src="img/navbar_logo.png" alt="logo"/>
-                        <h1 class="display-3">Lorem ipsum</h1>
-                        <p class="">
+        <section class="minh-25vh container-fluid d-flex align-items-center py-5">
+            <div class="row w-100 mx-0 pt-5 mt-5">
+                <div class="col-12 col-md-7 minh-25vh order-2 order-md-1"></div>
+                <div class="col-10 col-md-5 order-1 order-md-2 mx-auto d-flex align-items-center">
+                    <div class="text-center text-md-start">
+                        <h1 class="display-3 text-warning">Lorem ipsum</h1>
+                        <p class="text-white opacity-9">
                             Fusce suscipit, neque vel tincidunt sollicitudin, libero magna laoreet massa, 
                             eu pretium leo eros at mauris. Phasellus a lacus ipsum. Maecenas dapibus nisi 
                             ac fringilla pretium.
                         </p>
-                        <address>
+                        <address class="text-white opacity-9">
                             Fusce suscipit<br/>
                             neque vel tincidunt<br/>
                             pretium leo<br/>
@@ -64,10 +61,14 @@
                         </address>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section class="contact-s2 minh-25vh container-fluid d-flex align-items-center py-5">
+            <div class="row w-100 mx-0">
                 <div class="col-12 col-md-6 py-5 mx-auto">
-                    <div class="card shadow mx-auto" id="contact-data">
-                        <div class="card-header bg-light">
-                            <h6 class="text-secondary mb-0 d-inline-block">
+                    <div class="card shadow mx-auto border-primary" id="contact-data">
+                        <div class="card-header bg-primary">
+                            <h6 class="text-white mb-0 d-inline-block">
                                 Personal data
                             </h6>
                         </div>
@@ -92,21 +93,21 @@
                                 <label class="input-group-text bg-white col-4 col-md-3">Message:</label>
                                 <textarea class="col-8 col-md-9 form-control border-start-0 text-start"></textarea>
                             </div>                             
-                            <div class="mx-2 text-end border-top pt-3">
-                                <a href="#flight-details" class="btn btn-sm btn-outline-secondary rounded-pill">Clear</a>
-                                <a href="#payment-data" class="btn btn-sm btn-secondary rounded-pill">Send</a>
+                            <div class="text-end border-top border-primary pt-3">
+                                <a href="#flight-details" class="btn btn-sm btn-outline-primary rounded-pill">Clear</a>
+                                <a href="#payment-data" class="btn btn-sm btn-primary rounded-pill">Send</a>
                             </div>   
                         </div>
                     </div>
                 </div>
             </div>
-        </section>        
-        <footer class="container-fluid">
+        </section>    
+        <footer class="container-fluid bg-primary d-flex align-items-center py-2 border-top border-warning">
             <div class="row w-100 mx-0 text-center">
-                <div class="col-12 small">
-                    <p class="small text-dark">
+                <div class="col-12 small text-shadow">
+                    <p class="small text-white mb-0">
                         Copyright &copy; 2022. All rights reserved. 
-                        <a href="privacy.html" class="text-decoration-none text-dark">
+                        <a href="privacy.html" class="text-decoration-none text-white">
                             Privacy policy
                         </a>
                     </p>
