--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
                 <a href="index.html" class="navbar-brand">
                     <img class="navbar-logo" src="img/navbar_logo.png" alt="logo"/>
                 </a>
-                <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#main-nav">
+                <button class="navbar-toggler bg-warning" data-bs-toggle="collapse" data-bs-target="#main-nav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="main-nav">
-                    <ul class="navbar-nav ms-auto text-end text-uppercase">
+                    <ul class="navbar-nav ms-auto text-end text-uppercase fw-bold text-shadow">
                         <li class="nav-item">
-                            <a href="index.html" class="nav-link">Home</a>
+                            <a href="index.html" class="nav-link text-warning">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="services.html" class="nav-link">Services</a>
+                            <a href="services.html" class="nav-link text-warning">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a href="about.html" class="nav-link">About</a>
+                            <a href="about.html" class="nav-link text-warning">About</a>
                         </li>
                         <li class="nav-item">
-                            <a href="contact.html" class="nav-link">Contact</a>
+                            <a href="contact.html" class="nav-link text-warning">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a href="order.html" class="nav-link">
+                            <a href="order.html" class="nav-link text-warning">
                                 <span class="fa fa-shopping-cart"></span>
                             </a>
                         </li>
@@ -42,31 +42,29 @@
                 </div>
             </nav>
         </header>
-        <section class="index-s1 min-vh-100 container-fluid d-flex align-items-center py-5">
-            <div class="row w-100 mx-0">
-                <div class="col-12 col-md-7 order-1 order-md-2 minh-50vh"></div>
-                <div class="col-10 col-md-5 order-2 order-md-1 mx-auto d-flex align-items-center">
-                    <div class="text-center text-md-start">
-                        <img class="navbar-logo" src="img/navbar_logo.png" alt="logo"/>
-                        <h1 class="display-3">Lorem ipsum</h1>
+        <section class="index-s1 min-vh-100 container-fluid d-flex align-items-start py-5">
+            <div class="row w-100 mx-0 mt-5 pt-md-">
+                <div class="col-12 minh-50vh col-sm-6 col-md-8 mx-md-auto col-lg-6 ms-lg-0 d-flex align-items-center">
+                    <div class="text-center text-sm-start text-md-center text-lg-start text-white text-shadow">
+                        <h1 class="display-5 text-warning">Lorem ipsum</h1>
                         <p class="">
                             Fusce suscipit, neque vel tincidunt sollicitudin, libero magna laoreet massa, 
                             eu pretium leo eros at mauris. Phasellus a lacus ipsum. Maecenas dapibus nisi 
                             ac fringilla pretium.
                         </p>
-                        <div class="w-100 text-center text-md-start mt-2">
-                            <a href="services.html" class="btn btn-primary rounded-pill">See more</a>
+                        <div class="w-100 text-center text-sm-start text-md-center text-lg-start mt-2">
+                            <a href="services.html" class="btn btn-warning rounded-pill">See more</a>
                         </div>
                     </div>
                 </div>
             </div>
         </section> 
-        <footer class="container-fluid">
+        <footer class="container-fluid bg-primary d-flex align-items-center py-2 border-top border-warning">
             <div class="row w-100 mx-0 text-center">
-                <div class="col-12 small">
-                    <p class="small text-dark">
+                <div class="col-12 small text-shadow">
+                    <p class="small text-white mb-0">
                         Copyright &copy; 2022. All rights reserved. 
-                        <a href="privacy.html" class="text-decoration-none text-dark">
+                        <a href="privacy.html" class="text-decoration-none text-white">
                             Privacy policy
                         </a>
                     </p>
