--- a/order.html
+++ b/order.html
@@ -10,31 +10,31 @@
         <link rel="icon" href="img/favicon.png"/>
         <title>iClean Services | Order</title>
     </header>
-    <body class="bg-light">
+    <body class="bg-white">
         <header class="position-absolute w-100 px-2">
             <nav class="navbar navbar-expand-md navbar-light">
                 <a href="index.html" class="navbar-brand">
                     <img class="navbar-logo" src="img/navbar_logo.png" alt="logo"/>
                 </a>
-                <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#main-nav">
+                <button class="navbar-toggler bg-warning" data-bs-toggle="collapse" data-bs-target="#main-nav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="main-nav">
-                    <ul class="navbar-nav ms-auto text-end text-uppercase">
+                    <ul class="navbar-nav ms-auto text-end text-uppercase fw-bold text-shadow">
                         <li class="nav-item">
-                            <a href="index.html" class="nav-link">Home</a>
+                            <a href="index.html" class="nav-link text-warning">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="services.html" class="nav-link">Services</a>
+                            <a href="services.html" class="nav-link text-warning">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a href="about.html" class="nav-link">About</a>
+                            <a href="about.html" class="nav-link text-warning">About</a>
                         </li>
                         <li class="nav-item">
-                            <a href="contact.html" class="nav-link">Contact</a>
+                            <a href="contact.html" class="nav-link text-warning">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a href="order.html" class="nav-link">
+                            <a href="order.html" class="nav-link text-warning">
                                 <span class="fa fa-shopping-cart"></span>
                             </a>
                         </li>
@@ -44,7 +44,7 @@
         </header>
         <section class="order-s1 minh-25vh d-none d-md-block">
         </section>
-        <section class="order-s2 minh-75vh container-fluid d-flex align-items-start py-5">
+        <section class="order-s2 minh-75vh container-fluid d-flex align-items-start py-5 border-top border-warning">
             <div class="row w-100 mx-0 mt-5">
                 <div class="col-12 col-md-6">
                     <div class="card shadow mb-3 bg-white border-warning" id="order-details">
@@ -170,13 +170,13 @@
                     </div>
                 </div>
             </div>
-        </section>        
-        <footer class="container-fluid">
+        </section>    
+        <footer class="container-fluid bg-primary d-flex align-items-center py-2 border-top border-warning">
             <div class="row w-100 mx-0 text-center">
-                <div class="col-12 small">
-                    <p class="small text-dark">
+                <div class="col-12 small text-shadow">
+                    <p class="small text-white mb-0">
                         Copyright &copy; 2022. All rights reserved. 
-                        <a href="privacy.html" class="text-decoration-none text-dark">
+                        <a href="privacy.html" class="text-decoration-none text-white">
                             Privacy policy
                         </a>
                     </p>
