--- a/services.html
+++ b/services.html
@@ -16,25 +16,25 @@
                 <a href="index.html" class="navbar-brand">
                     <img class="navbar-logo" src="img/navbar_logo.png" alt="logo"/>
                 </a>
-                <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#main-nav">
+                <button class="navbar-toggler bg-warning" data-bs-toggle="collapse" data-bs-target="#main-nav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="main-nav">
-                    <ul class="navbar-nav ms-auto text-end text-uppercase">
+                    <ul class="navbar-nav ms-auto text-end text-uppercase fw-bold text-shadow">
                         <li class="nav-item">
-                            <a href="index.html" class="nav-link">Home</a>
+                            <a href="index.html" class="nav-link text-warning">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="services.html" class="nav-link">Services</a>
+                            <a href="services.html" class="nav-link text-warning">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a href="about.html" class="nav-link">About</a>
+                            <a href="about.html" class="nav-link text-warning">About</a>
                         </li>
                         <li class="nav-item">
-                            <a href="contact.html" class="nav-link">Contact</a>
+                            <a href="contact.html" class="nav-link text-warning">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a href="order.html" class="nav-link">
+                            <a href="order.html" class="nav-link text-warning">
                                 <span class="fa fa-shopping-cart"></span>
                             </a>
                         </li>
@@ -42,14 +42,13 @@
                 </div>
             </nav>
         </header>
-        <section class="services-s1 minh-25vh">
-        </section>
-        <section class="services-s2 minh-75vh container-fluid d-flex align-items-start py-5">
+        <section class="services-s1 minh-100vh container-fluid d-flex align-items-start py-5">
             <div class="row w-100 mx-0 mt-5">
+                <div class="col-12 minh-25vh d-none d-md-block"></div>
                 <div class="col-12 col-md-4 col-lg-3">
-                    <div class="card shadow mb-3">
-                        <div class="card-header">
-                            <h6 class="text-secondary mb-0 d-inline-block">
+                    <div class="card shadow mb-3 border-primary">
+                        <div class="card-header bg-primary">
+                            <h6 class="text-white pt-1 mb-0 d-inline-block">
                                 Search service
                             </h6>
                             <button class="btn btn-sm float-end rotate-obj" data-bs-toggle="collapse" data-bs-target="#filters">
@@ -69,29 +68,29 @@
                                     <option></option>
                                 </select>
                             </div>
-                            <h6 class="mt-3 mb-2 text-secondary border-top pt-2">
+                            <h6 class="mt-3 mb-2 text-primary border-top border-primary pt-2">
                                 Service details:
                             </h6>
                             <div class="input-group input-group-sm mb-2 ps-3 small">                                
-                                <label class="form-check-label text-secondary">
+                                <label class="form-check-label text-dark">
                                     <input type="checkbox" class="form-check-control"/>
                                     Remote service
                                 </label>    
                             </div>        
                             <div class="input-group input-group-sm mb-2 ps-3 small">                                
-                                <label class="form-check-label text-secondary">
+                                <label class="form-check-label text-dark">
                                     <input type="checkbox" class="form-check-control"/>
                                     At customer's place
                                 </label>    
                             </div>  
-                            <div class="mx-2 text-end border-top pt-2">
-                                <button class="btn btn-sm btn-secondary rounded-pill">Search</button>
+                            <div class="text-end border-top border-primary pt-2">
+                                <button class="btn btn-sm btn-primary rounded-pill">Search</button>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-8 col-lg-9">
-                    <div class="card mb-3 shadow bg-white">
+                    <div class="card mb-3 shadow bg-white border-primary">
                         <div class="row m-0">
                             <div class="col-lg-4 d-none d-lg-block px-0 bg-secondary">
                                 <img class="h-100 w-100" src="" alt=""/>
@@ -99,14 +98,14 @@
                             <div class="col-12 col-lg-8 px-0">
                                 <table class="table table-borderless mb-0">
                                     <thead>
-                                        <tr class="border-bottom text-secondary text-center">
+                                        <tr class="border-bottom text-white bg-primary text-center">
                                             <th>Service</th>
                                             <th>Description</th>
                                             <th>Price</th>
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr class="text-center text-secondary small">
+                                        <tr class="text-center text-dark small">
                                             <td>XXX</td>
                                             <td>DDDDDDDDDD</td>
                                             <td>$ 0.00</td>
@@ -119,13 +118,13 @@
 
                 </div>
             </div>
-        </section>        
-        <footer class="container-fluid">
+        </section>     
+        <footer class="container-fluid bg-primary d-flex align-items-center py-2 border-top border-warning">
             <div class="row w-100 mx-0 text-center">
-                <div class="col-12 small">
-                    <p class="small text-dark">
+                <div class="col-12 small text-shadow">
+                    <p class="small text-white mb-0">
                         Copyright &copy; 2022. All rights reserved. 
-                        <a href="privacy.html" class="text-decoration-none text-dark">
+                        <a href="privacy.html" class="text-decoration-none text-white">
                             Privacy policy
                         </a>
                     </p>
