--- a/about.html
+++ b/about.html
@@ -16,25 +16,25 @@
                 <a href="index.html" class="navbar-brand">
                     <img class="navbar-logo" src="img/navbar_logo.png" alt="logo"/>
                 </a>
-                <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#main-nav">
+                <button class="navbar-toggler bg-warning" data-bs-toggle="collapse" data-bs-target="#main-nav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="main-nav">
-                    <ul class="navbar-nav ms-auto text-end text-uppercase">
+                    <ul class="navbar-nav ms-auto text-end text-uppercase fw-bold text-shadow">
                         <li class="nav-item">
-                            <a href="index.html" class="nav-link">Home</a>
+                            <a href="index.html" class="nav-link text-warning">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="services.html" class="nav-link">Services</a>
+                            <a href="services.html" class="nav-link text-warning">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a href="about.html" class="nav-link">About</a>
+                            <a href="about.html" class="nav-link text-warning">About</a>
                         </li>
                         <li class="nav-item">
-                            <a href="contact.html" class="nav-link">Contact</a>
+                            <a href="contact.html" class="nav-link text-warning">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a href="order.html" class="nav-link">
+                            <a href="order.html" class="nav-link text-warning">
                                 <span class="fa fa-shopping-cart"></span>
                             </a>
                         </li>
@@ -42,15 +42,15 @@
                 </div>
             </nav>
         </header>
-        <section class="about-s1 minh-50vh container-fluid d-flex align-items-center pt-5">
-            <div class="row w-100 mx-0 mt-5 pt-5">
-                <div class="col-12 col-md-6 col-lg-7 minh-25vh"></div>
-                <div class="col-12 col-md-6 col-lg-5 d-flex align-items-center">
-                    <div class="text-center text-md-start">
-                        <h2 class="display-6">
+        <section class="about-s1 minh-50vh container-fluid d-flex align-items-center py-5">
+            <div class="row w-100 mx-0 mt-5">
+                <div class="col-12 col-sm-5 col-md-6 order-2 order-sm-1 minh-25vh"></div>
+                <div class="col-12 col-sm-7 col-md-6 order-1 order-sm-2 d-flex align-items-center pb-5">
+                    <div class="text-center text-sm-end text-md-start">
+                        <h2 class="display-6 text-warning">
                             Phasellus a lacus
                         </h2>
-                        <p class="text-secondary">
+                        <p class="text-white opacity-9">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce suscipit, 
                             neque vel tincidunt sollicitudin, libero magna laoreet massa, eu pretium 
                             leo eros at mauris. Phasellus a lacus ipsum. Maecenas dapibus nisi ac 
@@ -64,14 +64,14 @@
                 </div>
             </div>
         </section>
-        <section class="about-s2 minh-50vh container-fluid d-flex align-items-center py-5">
-            <div class="row w-100 mx-0">
-                <div class="col-12 col-md-6 col-lg-5 order-2 order-md-1 d-flex align-items-center">
+        <section class="about-s2 minh-50vh container-fluid d-flex align-items-center py-5 border-top border-warning">
+            <div class="row w-100 mx-0 mb-5">
+                <div class="col-12 col-sm-6 col-lg-5 order-2 order-md-1 d-flex align-items-center">
                     <div class="text-center text-md-start">
-                        <h2 class="display-6">
+                        <h2 class="display-6 text-warning">
                             Phasellus a lacus
                         </h2>
-                        <p class="text-secondary">
+                        <p class="text-dark opacity-9">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce suscipit, 
                             neque vel tincidunt sollicitudin, libero magna laoreet massa, eu pretium 
                             leo eros at mauris. Phasellus a lacus ipsum. Maecenas dapibus nisi ac 
@@ -83,15 +83,15 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-7 minh-25vh order-1 order-md-2"></div>
+                <div class="col-12 col-sm-6 col-lg-7 minh-25vh order-2 order-md-1"></div>
             </div>
         </section>
-        <footer class="container-fluid">
+        <footer class="container-fluid bg-primary d-flex align-items-center py-2 border-top border-warning">
             <div class="row w-100 mx-0 text-center">
-                <div class="col-12 small">
-                    <p class="small text-dark">
+                <div class="col-12 small text-shadow">
+                    <p class="small text-white mb-0">
                         Copyright &copy; 2022. All rights reserved. 
-                        <a href="privacy.html" class="text-decoration-none text-dark">
+                        <a href="privacy.html" class="text-decoration-none text-white">
                             Privacy policy
                         </a>
                     </p>
